Resolves: tdf#123466 Add Microsoft ill-used {x-none} to known language tags

'x-none' is a private-use tag and letting it escape into the wild
isn't such a private use..

This just prevents the lt_string_value assertion that doesn't harm
anyway but seems to confuse people and makes the tag known to
LibreOffice with a reproducible assigned LCID instead of an
on-the-fly generated one.

Whatever it may take to actually support something tagged with
'x-none'.

Change-Id: I3f32c9ba18a2528584a112157509c1dfda75e29c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/118788
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins